add temp to waybar and nvim minimalistic

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -33,6 +33,7 @@ exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 exec-once = hypridle
 
+
 # # # My applications # # #
 exec-once = [workspace 1; float; move 125 150; size 1200 850] kitty tmux
 exec-once = [workspace 2; float; center; size 1445 1090] google-chrome-stable
@@ -54,6 +55,8 @@ input {
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+    repeat_delay = 300
+    repeat_rate = 100
 }
 
 general {
@@ -133,6 +136,7 @@ gestures {
     workspace_swipe_invert = false
     workspace_swipe_distance = 180
 }
+
 
 
 
