--- a/.dotter/cache.toml
+++ b/.dotter/cache.toml
@@ -5,6 +5,7 @@
 "hypr/hypridle.conf" = "/home/alchemmist/.config/hypr/hypridle.conf"
 "hypr/hyprland.conf" = "/home/alchemmist/.config/hypr/hyprland.conf"
 "hypr/hyprlock.conf" = "/home/alchemmist/.config/hypr/hyprlock.conf"
+"hypr/shaders/blue-light-filter.glsl" = "/home/alchemmist/.config/hypr/shaders/blue-light-filter.glsl"
 "kitty/gruvbox.conf" = "/home/alchemmist/.config/kitty/gruvbox.conf"
 "kitty/kitty.conf" = "/home/alchemmist/.config/kitty/kitty.conf"
 "kitty/mocha.conf" = "/home/alchemmist/.config/kitty/mocha.conf"
@@ -36,6 +37,7 @@
 "nvim/lua/plugins/configs/telescope.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/telescope.lua"
 "nvim/lua/plugins/configs/treesitter.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/treesitter.lua"
 "nvim/lua/plugins/init.lua" = "/home/alchemmist/.config/nvim/lua/plugins/init.lua"
+"redshift/redshift.conf" = "/home/alchemmist/.config/redshift/redshift.conf"
 "scripts/ask-sudo-pass.sh" = "/home/alchemmist/scripts/ask-sudo-pass.sh"
 "scripts/ask_pass.css" = "/home/alchemmist/scripts/ask_pass.css"
 "scripts/battery_stat.sh" = "/home/alchemmist/scripts/battery_stat.sh"
