--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -67,13 +67,13 @@ general {
     #col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.active_border=rgb(cdd6f4)
     col.inactive_border = rgba(595959aa)
-
     layout = dwindle
 }
 
 
 misc {
     disable_hyprland_logo = yes
+    disable_hyprland_qtutils_check = true
 }
 
 decoration {
