--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -32,6 +32,7 @@ exec-once=/usr/lib/polkit-kde-authentication-agent-1 # Graphical password reques
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 exec-once = hypridle
+exec-once = hyprswitch init --size-factor 4 --workspaces-per-row 4 &
 
 
 # # # My applications # # #
@@ -55,8 +56,8 @@ input {
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-    repeat_delay = 300
-    repeat_rate = 100
+    repeat_rate = 50
+    repeat_delay = 200
 }
 
 general {
@@ -220,8 +221,13 @@ $mainMod = SUPER
 
 
 # bind = ALT, Tab, bringactivetotop
-bind = ALT,Tab,cyclenext 
-bind = ALT,Tab,bringactivetotop
+# bind = ALT,Tab,cyclenext 
+# bind = ALT,Tab,bringactivetotop
+
+# Открыть GUI hyprswitch
+bind = ALT, TAB, exec, hyprswitch simple --filter-current-workspace
+bind = ALT SHIFT, TAB, exec, hyprswitch simple --filter-current-workspace --reverse
+
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, kitty  #open the terminal
@@ -247,8 +253,8 @@ bind = $mainMod SHIFT, T, exec, kitty --title termdown -e termdown
 bind = $mainMod, SPACE, exec, wofi-emoji
 
 # ROG G15 Strix (2021) Specific binds
-bind = ,156, exec, rog-control-center # ASUS Armory crate key
-bind = ,211, exec, asusctl profile -n; pkill -SIGRTMIN+8 waybar # Fan Profile key switch between power profiles
+# bind = ,156, exec, rog-control-center # ASUS Armory crate key
+# bind = ,211, exec, asusctl profile -n; pkill -SIGRTMIN+8 waybar # Fan Profile key switch between power profiles
 bind = ,121, exec, pamixer -t # Speaker Mute FN+F1
 bind = ,122, exec, pamixer -d 5 # Volume lower key
 bind = ,123, exec, pamixer -i 5 # Volume Higher key
@@ -257,7 +263,6 @@ bind = ,232, exec, brightnessctl set 2%- # Screen brightness down FN+F7
 bind = ,233, exec, brightnessctl set 2%+ # Screen brightness up FN+F8
 bind = ,237, exec, brightnessctl -d asus::kbd_backlight set 33%- # Keyboard brightness down FN+F2
 bind = ,238, exec, brightnessctl -d asus::kbd_backlight set 33%+ # Keyboard brightnes up FN+F3
-bind = ,210, exec, asusctl led-mode -n # Switch keyboard RGB profile FN+F4
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, l, movefocus, l
