--- a/waybar/hypr-config.json
+++ b/waybar/hypr-config.json
@@ -42,7 +42,7 @@
     },
     "interval": "once",
     "exec": "pgrep -x gammastep >/dev/null && echo '{\"class\": \"on\", \"alt\": \"on\"}' || echo '{\"class\": \"off\", \"alt\": \"off\"}'",
-    "on-click": "pgrep -x gammastep >/dev/null && pkill gammastep || (gammastep -O 4000 &) && pkill -SIGRTMIN+3 waybar", 
+    "on-click": "pgrep -x gammastep >/dev/null && pkill gammastep || (gammastep -O 4000 &) && pkill -SIGRTMIN+3 waybar",
     "signal": 3,
     "interval": "once",
     "tooltip": false,
@@ -203,15 +203,16 @@
 
   "battery": {
     "states": {
-      "good": 95,
-      "warning": 30,
-      "critical": 20
+      "good": 90,
+      "warning": 25,
+      "critical": 10
     },
     "format": "{icon} {capacity}%",
     "format-charging": " {capacity}%",
     "format-plugged": " {capacity}%",
     "format-icons": ["󰂎", "󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"],
-    "tooltip": "{time}"
+    "tooltip": "{time}",
+    "style": "{capacity < 10 ? 'color: red;' : 'color: normal;'}"
   },
 
   "pulseaudio": {
