--- a/.dotter/cache.toml
+++ b/.dotter/cache.toml
@@ -12,30 +12,13 @@
 "mako/config" = "/home/alchemmist/.config/mako/config"
 "nvim/init.lua" = "/home/alchemmist/.config/nvim/init.lua"
 "nvim/lazy-lock.json" = "/home/alchemmist/.config/nvim/lazy-lock.json"
-"nvim/lua/core/bootstrap.lua" = "/home/alchemmist/.config/nvim/lua/core/bootstrap.lua"
-"nvim/lua/core/default_config.lua" = "/home/alchemmist/.config/nvim/lua/core/default_config.lua"
-"nvim/lua/core/init.lua" = "/home/alchemmist/.config/nvim/lua/core/init.lua"
-"nvim/lua/core/mappings.lua" = "/home/alchemmist/.config/nvim/lua/core/mappings.lua"
-"nvim/lua/core/utils.lua" = "/home/alchemmist/.config/nvim/lua/core/utils.lua"
-"nvim/lua/custom/README.md" = "/home/alchemmist/.config/nvim/lua/custom/README.md"
-"nvim/lua/custom/chadrc.lua" = "/home/alchemmist/.config/nvim/lua/custom/chadrc.lua"
-"nvim/lua/custom/configs/lspconfig.lua" = "/home/alchemmist/.config/nvim/lua/custom/configs/lspconfig.lua"
-"nvim/lua/custom/configs/null-ls.lua" = "/home/alchemmist/.config/nvim/lua/custom/configs/null-ls.lua"
-"nvim/lua/custom/configs/overrides.lua" = "/home/alchemmist/.config/nvim/lua/custom/configs/overrides.lua"
-"nvim/lua/custom/figures.lua" = "/home/alchemmist/.config/nvim/lua/custom/figures.lua"
-"nvim/lua/custom/highlights.lua" = "/home/alchemmist/.config/nvim/lua/custom/highlights.lua"
-"nvim/lua/custom/init.lua" = "/home/alchemmist/.config/nvim/lua/custom/init.lua"
-"nvim/lua/custom/mappings.lua" = "/home/alchemmist/.config/nvim/lua/custom/mappings.lua"
-"nvim/lua/custom/plugins.lua" = "/home/alchemmist/.config/nvim/lua/custom/plugins.lua"
-"nvim/lua/custom/snippets.lua" = "/home/alchemmist/.config/nvim/lua/custom/snippets.lua"
-"nvim/lua/plugins/configs/cmp.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/cmp.lua"
-"nvim/lua/plugins/configs/lazy_nvim.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/lazy_nvim.lua"
-"nvim/lua/plugins/configs/lspconfig.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/lspconfig.lua"
-"nvim/lua/plugins/configs/mason.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/mason.lua"
-"nvim/lua/plugins/configs/nvimtree.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/nvimtree.lua"
-"nvim/lua/plugins/configs/others.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/others.lua"
-"nvim/lua/plugins/configs/telescope.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/telescope.lua"
-"nvim/lua/plugins/configs/treesitter.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/treesitter.lua"
+"nvim/lua/lazy.lua" = "/home/alchemmist/.config/nvim/lua/lazy.lua"
+"nvim/lua/mappings/block.lua" = "/home/alchemmist/.config/nvim/lua/mappings/block.lua"
+"nvim/lua/mappings/init.lua" = "/home/alchemmist/.config/nvim/lua/mappings/init.lua"
+"nvim/lua/mappings/insert.lua" = "/home/alchemmist/.config/nvim/lua/mappings/insert.lua"
+"nvim/lua/mappings/normal.lua" = "/home/alchemmist/.config/nvim/lua/mappings/normal.lua"
+"nvim/lua/mappings/terminal.lua" = "/home/alchemmist/.config/nvim/lua/mappings/terminal.lua"
+"nvim/lua/mappings/visual.lua" = "/home/alchemmist/.config/nvim/lua/mappings/visual.lua"
 "nvim/lua/plugins/init.lua" = "/home/alchemmist/.config/nvim/lua/plugins/init.lua"
 "scripts/ask-sudo-pass.sh" = "/home/alchemmist/scripts/ask-sudo-pass.sh"
 "scripts/ask_pass.css" = "/home/alchemmist/scripts/ask_pass.css"
@@ -150,6 +133,7 @@
 "wallpapers/nature/niderlandy-utro-tuman-derevia-sosny-luna-polnolunie.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/niderlandy-utro-tuman-derevia-sosny-luna-polnolunie.jpg"
 "wallpapers/nature/norvegiia-lofoteny-priroda-peizazh-gory-skaly-lofotenskie-os.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/norvegiia-lofoteny-priroda-peizazh-gory-skaly-lofotenskie-os.jpg"
 "wallpapers/nature/priroda-gory-skaly-nebo-oblaka-dolomity-rassvet.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-gory-skaly-nebo-oblaka-dolomity-rassvet.jpg"
+"wallpapers/nature/priroda-gory-skaly-nebo-tuchi-norvegiia-norway-zakat-vecher.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-gory-skaly-nebo-tuchi-norvegiia-norway-zakat-vecher.jpg"
 "wallpapers/nature/priroda-peizazh-les-derevia-zima-sneg-ruchei-chelovek-svet.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-peizazh-les-derevia-zima-sneg-ruchei-chelovek-svet.jpg"
 "wallpapers/nature/priroda-peizazh-nebo-oblaka-6.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-peizazh-nebo-oblaka-6.jpg"
 "wallpapers/nature/rene-unger-priroda-peizazh-bavariia-gory-alpy-kholmy-doroga.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/rene-unger-priroda-peizazh-bavariia-gory-alpy-kholmy-doroga.jpg"
