--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -42,7 +42,7 @@ exec-once = [workspace 2; float; center; size 1445 1090] google-chrome-stable
 exec-once = [workspace 3] telegram-desktop
 exec-once = [workspace 3] time-desktop
 # exec-once = [workspace 8] kitty /home/alchemmist/scripts/start_nvim_in_kb.sh
-exec-once = [workspace 10; float; move 160 140; size 1400 950] obsidian
+# exec-once = [workspace 10; float; move 160 140; size 1400 950] obsidian
 
 # For all categories, see https://wiki.h
 input {
