compact nvim config

--- a/.dotter/cache.toml
+++ b/.dotter/cache.toml
@@ -12,14 +12,22 @@
 "mako/config" = "/home/alchemmist/.config/mako/config"
 "nvim/init.lua" = "/home/alchemmist/.config/nvim/init.lua"
 "nvim/lazy-lock.json" = "/home/alchemmist/.config/nvim/lazy-lock.json"
-"nvim/lua/lazy.lua" = "/home/alchemmist/.config/nvim/lua/lazy.lua"
-"nvim/lua/mappings/block.lua" = "/home/alchemmist/.config/nvim/lua/mappings/block.lua"
-"nvim/lua/mappings/init.lua" = "/home/alchemmist/.config/nvim/lua/mappings/init.lua"
-"nvim/lua/mappings/insert.lua" = "/home/alchemmist/.config/nvim/lua/mappings/insert.lua"
-"nvim/lua/mappings/normal.lua" = "/home/alchemmist/.config/nvim/lua/mappings/normal.lua"
-"nvim/lua/mappings/terminal.lua" = "/home/alchemmist/.config/nvim/lua/mappings/terminal.lua"
-"nvim/lua/mappings/visual.lua" = "/home/alchemmist/.config/nvim/lua/mappings/visual.lua"
+"nvim/lua/core/bootstrap.lua" = "/home/alchemmist/.config/nvim/lua/core/bootstrap.lua"
+"nvim/lua/core/default_config.lua" = "/home/alchemmist/.config/nvim/lua/core/default_config.lua"
+"nvim/lua/core/init.lua" = "/home/alchemmist/.config/nvim/lua/core/init.lua"
+"nvim/lua/core/mappings.lua" = "/home/alchemmist/.config/nvim/lua/core/mappings.lua"
+"nvim/lua/core/utils.lua" = "/home/alchemmist/.config/nvim/lua/core/utils.lua"
+"nvim/lua/plugins/configs/cmp.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/cmp.lua"
+"nvim/lua/plugins/configs/lazy_nvim.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/lazy_nvim.lua"
+"nvim/lua/plugins/configs/lspconfig.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/lspconfig.lua"
+"nvim/lua/plugins/configs/mason.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/mason.lua"
+"nvim/lua/plugins/configs/null-ls.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/null-ls.lua"
+"nvim/lua/plugins/configs/nvimtree.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/nvimtree.lua"
+"nvim/lua/plugins/configs/others.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/others.lua"
+"nvim/lua/plugins/configs/telescope.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/telescope.lua"
+"nvim/lua/plugins/configs/treesitter.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/treesitter.lua"
 "nvim/lua/plugins/init.lua" = "/home/alchemmist/.config/nvim/lua/plugins/init.lua"
+"nvim/lua/snippets.lua" = "/home/alchemmist/.config/nvim/lua/snippets.lua"
 "scripts/ask-sudo-pass.sh" = "/home/alchemmist/scripts/ask-sudo-pass.sh"
 "scripts/ask_pass.css" = "/home/alchemmist/scripts/ask_pass.css"
 "scripts/battery_stat.sh" = "/home/alchemmist/scripts/battery_stat.sh"
