--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -4,14 +4,18 @@
 # ┴ ┴└─┘┘└┘ ┴ ┴ └─┘┴└─└─┘ #
 # # # # # # # # # # # # # #
 
-monitor=,preferred,auto,1
+monitor = eDP-1,1920x1200@60,0x0,1
+# monitor = HDMI-A-1, 3840x2160@30, 1920x0, 1, mirror, eDP-1
+
+
+# monitor=,preferred,auto,1, mirror, HDMI-A-1
 
 
 # Dual monitor example on G15 Strix
 # eDP-1 is the built in monitor while DP-1 is external
 # Both monitors here are at 1440 and 165Hz
 # DP-1 is on the left and  eDP-1 is on the right
-#monitor=DP-1,2560x1440@165,0x0,1
+# monitor=DP-1,2560x1440@165,0x0,1
 #monitor=eDP-1,2560x1440@165,2560x0,1
 
 
@@ -35,8 +39,9 @@ exec-once = hypridle
 exec-once = hyprswitch init --size-factor 4 --workspaces-per-row 4 &
 
 
+
 # # # My applications # # #
-exec-once = [workspace 1; float; move 125 150; size 1200 850] kitty tmux
+exec-once = [workspace 1; float; move 125 150; size 700 850] kitty tmux
 exec-once = [workspace 2; float; center; size 1445 1090] google-chrome-stable
 # exec-once = [workspace 3; float; move 30 85; size 1270 1070] telegram-desktop
 exec-once = [workspace 3] telegram-desktop
@@ -45,6 +50,12 @@ exec-once = [workspace 3] time-desktop
 # exec-once = [workspace 10; float; move 160 140; size 1400 950] obsidian
 
 # For all categories, see https://wiki.h
+
+ecosystem {
+    no_donation_nag = false
+}
+
+
 input {
     kb_layout = us,ru
     kb_variant = querty
@@ -175,9 +186,17 @@ windowrulev2 = size 800 800,title:^(yazi)$
 windowrulev2 = center,title:^(yazi)$
 
 # Thunar (browser file selector)
+windowrulev2 = float,title:^(Open Files)$
+windowrulev2 = size 800 800,title:^(Open Files)$
+windowrulev2 = center,title:^(Open Files)$
+
 windowrulev2 = float,title:^(Open File)$
-windowrulev2 = size 800 800,class:^(Open File)$
-windowrulev2 = center,class:^(Open File)$
+windowrulev2 = size 800 800,title:^(Open File)$
+windowrulev2 = center,title:^(Open File)$
+
+windowrulev2 = float,title:^(Save File)$
+windowrulev2 = size 800 800,title:^(Save File)$
+windowrulev2 = center,title:^(Save File)$
 
 # Qimgv
 windowrulev2 = float, class:^(qimgv)$
@@ -251,6 +270,9 @@ bind = CTRL, apostrophe, exec, wtype -P right -p right
 bind = $mainMod SHIFT, C, exec, kitty /home/alchemmist/scripts/start_nvim_in_kb.sh
 bind = $mainMod SHIFT, T, exec, kitty --title termdown -e termdown 
 bind = $mainMod, SPACE, exec, wofi-emoji
+# bind = $mainMod, R, exec, ffmpeg -f alsa -i default -acodec libmp3lame -ab 192k /home/alchemmist/recordings/$(date +\%Y-\%m-\%d_\%H-\%M-\%S).mp3
+
+
 
 # ROG G15 Strix (2021) Specific binds
 # bind = ,156, exec, rog-control-center # ASUS Armory crate key
