--- a/ssh/config
+++ b/ssh/config
@@ -27,3 +27,13 @@ Host cu_ctf
     HostName 10.80.2.2
     User root
     IdentityFile ~/.ssh/cu_ctf
+
+Host 84.201.163.192
+    HostName 84.201.163.192
+    User root
+    IdentityFile ~/.ssh/maks_ctf
+
+Host git.culab.ru
+    HostName git.culab.ru
+    User git
+    IdentityFile ~/.ssh/cu-gitlab
