--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -47,12 +47,12 @@ exec-once = [workspace 2; float; center; size 1445 1090] google-chrome-stable
 exec-once = [workspace 3] telegram-desktop
 exec-once = [workspace 3] time-desktop
 # exec-once = [workspace 8] kitty /home/alchemmist/scripts/start_nvim_in_kb.sh
-# exec-once = [workspace 10; float; move 160 140; size 1400 950] obsidian
 
 # For all categories, see https://wiki.h
 
 ecosystem {
-    no_donation_nag = false
+    no_donation_nag = true
+    no_update_news = true
 }
 
 
@@ -162,6 +162,12 @@ workspace=7,persistent:true
 workspace=8,persistent:true
 workspace=9,persistent:true
 workspace=10,persistent:true
+
+# Obsidian
+windowrulev2=size 1140 963,class:^(obsidian)$
+windowrulev2=move 390 135,class:^(obsidian)$
+windowrulev2=workspace 10,class:^(obsidian)$
+windowrulev2=pseudotile,class:^(obsidian)$
 
 
 # Telegram Image Preview
@@ -335,4 +341,7 @@ bind = $mainMod CTRL SHIFT, h, swapwindow, l
 bind = $mainMod CTRL SHIFT, l, swapwindow, r
 bind = $mainMod CTRL SHIFT, k, swapwindow, u
 bind = $mainMod CTRL SHIFT, j, swapwindow, d
+
+
+
 
