--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -41,8 +41,8 @@ exec-once = hyprswitch init --size-factor 4 --workspaces-per-row 4 &
 
 
 # # # My applications # # #
-exec-once = [workspace 1; float; move 125 150; size 700 850] kitty tmux
-exec-once = [workspace 2; float; center; size 1445 1090] google-chrome-stable
+exec-once = [workspace 1; pseudotile; size 1150 750] kitty tmux
+exec-once = [workspace 2; float; size 1485 1090] google-chrome-stable
 # exec-once = [workspace 3; float; move 30 85; size 1270 1070] telegram-desktop
 exec-once = [workspace 3] telegram-desktop
 exec-once = [workspace 3] time-desktop
@@ -58,7 +58,6 @@ ecosystem {
 
 input {
     kb_layout = us,ru
-    kb_variant = querty
     kb_options = ctrl:nocaps,grp:shifts_toggle # grp:win_space_toggle,
     follow_mouse = 1
 
@@ -163,6 +162,10 @@ workspace=8,persistent:true
 workspace=9,persistent:true
 workspace=10,persistent:true
 
+# imv
+windowrulev2=float,class:^(imv)$
+windowrulev2=size 700 600,class:^(imv)$
+
 # Obsidian
 windowrulev2=size 1140 963,class:^(obsidian)$
 windowrulev2=move 390 135,class:^(obsidian)$
@@ -181,9 +184,9 @@ windowrulev2 = size 1035 700,title:^(Syncthing)$
 windowrulev2 = center,title:^(Syncthing)$
 
 # YandexMusic
-windowrulev2 = float,class:^(YandexMusic)$
-windowrulev2 = size 1110 750,class:^(YandexMusic)$
-windowrulev2 = move 720 135,title:^(YandexMusic)$
+windowrulev2 = float,class:^(yandex-music)$
+windowrulev2 = size 1110 750,class:^(yandex-music)$
+windowrulev2 = move 720 135,title:^(yandex-music)$
 
 
 # Yazi
@@ -260,7 +263,7 @@ bind = ALT, F4, killactive, # close the active window
 bind = , 135, exec, hyprlock # Lock the screen
 bind = $mainMod, M, exec, wlogout --protocol layer-shell # show the logout window
 bind = $mainMod CTRL SHIFT, M, exit # Exit Hyprland all together no (force quit Hyprland)
-bind = $mainMod, E, exec, kitty --title yazi -e yazi ~ #thunar # Show the graphical file browser
+bind = $mainMod, E, exec, kitty --title yazi -e yazi #thunar # Show the graphical file browser
 bind = $mainMod, B, exec, google-chrome-stable # Show the graphical file browser
 bind = $mainMod, T, togglefloating # Allow a window to float
 bind = $mainMod, P, pseudo, # dwindle
