fix and update zsh

--- a/.dotter/cache.toml
+++ b/.dotter/cache.toml
@@ -52,6 +52,7 @@
 "sway/config" = "/home/alchemmist/.config/sway/config"
 "tmux/.tmux.conf" = "/home/alchemmist/.tmux.conf"
 "tmux/.tmux.conf.local" = "/home/alchemmist/.tmux.conf.local"
+"vim/.vimrc" = "/home/alchemmist/.vimrc"
 "wallpapers/abstract/Uno_Xray-EF354.png" = "/home/alchemmist/Pictures/wallpapers/abstract/Uno_Xray-EF354.png"
 "wallpapers/abstract/a5b32f08-c8b4-4f73-a51d-457ad1b56686-5D96D.jpg" = "/home/alchemmist/Pictures/wallpapers/abstract/a5b32f08-c8b4-4f73-a51d-457ad1b56686-5D96D.jpg"
 "wallpapers/abstract/black_bubbles-4DE5A.png" = "/home/alchemmist/Pictures/wallpapers/abstract/black_bubbles-4DE5A.png"
