--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -41,7 +41,7 @@ exec-once = hyprswitch init --size-factor 4 --workspaces-per-row 4 &
 
 
 # # # My applications # # #
-exec-once = [workspace 1; pseudotile; size 1150 750] kitty tmux
+exec-once = [workspace 1; float; size 1150 750] kitty tmux
 exec-once = [workspace 2; float; size 1485 1090] google-chrome-stable
 # exec-once = [workspace 3; float; move 30 85; size 1270 1070] telegram-desktop
 exec-once = [workspace 3] telegram-desktop
@@ -263,7 +263,7 @@ bind = ALT, F4, killactive, # close the active window
 bind = , 135, exec, hyprlock # Lock the screen
 bind = $mainMod, M, exec, wlogout --protocol layer-shell # show the logout window
 bind = $mainMod CTRL SHIFT, M, exit # Exit Hyprland all together no (force quit Hyprland)
-bind = $mainMod, E, exec, kitty --title yazi -e yazi #thunar # Show the graphical file browser
+bind = $mainMod, E, exec, kitty --title yazi --hold sh -c 'yazi; kitty @ close-window'
 bind = $mainMod, B, exec, google-chrome-stable # Show the graphical file browser
 bind = $mainMod, T, togglefloating # Allow a window to float
 bind = $mainMod, P, pseudo, # dwindle
