--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -35,8 +35,10 @@ exec-once = flameshot # Screenshot application
 exec-once=/usr/lib/polkit-kde-authentication-agent-1 # Graphical password requester
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
+exec-once = copyq &
 exec-once = hypridle
 exec-once = hyprswitch init --size-factor 4 --workspaces-per-row 4 &
+exec-once = ulauncher --hide-window --no-window-shadow &
 
 
 
@@ -239,6 +241,11 @@ windowrulev2 = float,class:^(xdg-desktop-portal-gtk)$
 windowrulev2 = center,class:^(xdg-desktop-portal-gtk)$
 windowrulev2 = size 600 600,class:^(xdg-desktop-portal-gtk)$
 
+# zeal (offlie docs)
+windowrulev2 = float,class:^(org.zealdocs.zeal)$
+windowrulev2 = size 960 980,class:^(org.zealdocs.zeal)$
+windowrulev2 = move 880 115,class:^(org.zealdocs.zeal)$
+
 
 
 # inkscape
@@ -263,22 +270,23 @@ bind = ALT, F4, killactive, # close the active window
 bind = , 135, exec, hyprlock # Lock the screen
 bind = $mainMod, M, exec, wlogout --protocol layer-shell # show the logout window
 bind = $mainMod CTRL SHIFT, M, exit # Exit Hyprland all together no (force quit Hyprland)
-bind = $mainMod, E, exec, kitty --title yazi --hold sh -c 'yazi; kitty @ close-window'
+bind = $mainMod, E, exec, kitty -o allow_remote_control=yes --title yazi --hold sh -c 'yazi; kitty @ close-window'
 bind = $mainMod, B, exec, google-chrome-stable # Show the graphical file browser
 bind = $mainMod, T, togglefloating # Allow a window to float
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, O, togglesplit, # dwindle
-bind = ALT, SPACE, exec, wofi # Show the graphicall app launcher
+bind = ALT, SPACE, exec, ulauncher-toggle --no-window-shadow # Show the graphicall app launcher
 bind = $mainMod, S, exec, flameshot gui --path=$HOME/Pictures/screenshots/ --clipboard # take a screenshot
 bind = ,F12, exec,grim -g "$(slurp)" - | tee ~/Pictures/screenshots/$(date +%Y-%m-%d_%H-%M-%S).png | wl-copy
 bind = $mainMod SHIFT, R, exec, killall waybar ; waybar --config /home/alchemmist/.config/waybar/hypr-config.json --style /home/alchemmist/.config/waybar/hypr-style.css
 bind = $mainMod, W, exec, ~/scripts/swww_random.sh
 bind = $mainMod SHIFT, W, exec, kitty --title wallpaper_pack_selector /home/alchemmist/scripts/wallpaper_pack_selector.sh
-bind = SUPER, C, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
+# bind = SUPER, C, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
 bind = CTRL, apostrophe, exec, wtype -P right -p right
 bind = $mainMod SHIFT, C, exec, kitty /home/alchemmist/scripts/start_nvim_in_kb.sh
 bind = $mainMod SHIFT, T, exec, kitty --title termdown -e termdown 
-bind = $mainMod, SPACE, exec, wofi-emoji
+bind = $mainMod,F,fullscreen
+# bind = $mainMod, SPACE, exec, wofi-emoji
 # bind = $mainMod, R, exec, ffmpeg -f alsa -i default -acodec libmp3lame -ab 192k /home/alchemmist/recordings/$(date +\%Y-\%m-\%d_\%H-\%M-\%S).mp3
 
 
