--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -23,6 +23,9 @@ unbind C-b
 set-option -g prefix C-a
 bind C-a send-prefix
 
+bind-key C-n set-option -g status
+
+
 set -q -g status-utf8 on                  # expect UTF-8 (tmux < 2.2)
 setw -q -g utf8 on
 
