--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -175,6 +175,7 @@ windowrulev2=workspace 10,class:^(obsidian)$
 windowrulev2=pseudotile,class:^(obsidian)$
 
 
+
 # Telegram Image Preview
 windowrulev2 = float,title:^(Media viewer)$
 windowrulev2 = size 1890 1145,title:^(Media viewer)$
@@ -246,6 +247,10 @@ windowrulev2 = float,class:^(org.zealdocs.zeal)$
 windowrulev2 = size 960 980,class:^(org.zealdocs.zeal)$
 windowrulev2 = move 880 115,class:^(org.zealdocs.zeal)$
 
+# thunar
+windowrulev2 = float,class:^(thunar)$
+windowrulev2 = center,class:^(thunar)$
+windowrulev2 = size 600 600,class:^(thunar)$
 
 
 # inkscape
