--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -23,7 +23,7 @@ unbind C-b
 set-option -g prefix C-a
 bind C-a send-prefix
 
-bind-key C-n set-option -g status
+bind-key C-z set-option -g status
 
 
 set -q -g status-utf8 on                  # expect UTF-8 (tmux < 2.2)
@@ -167,6 +167,11 @@ run 'cut -c3- "$TMUX_CONF" | sh -s _apply_configuration'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-restore 'on'
+set -g @resurrect-strategy-vim 'session'
+set -g @resurrect-strategy-nvim 'session'
+set -g @resurrect-strategy-zsh 'session'
+set -g @resurrect-capture-pane-contents 'on'
+
 
 # EOF
 #
