--- a/ghostty/config
+++ b/ghostty/config
@@ -20,7 +20,8 @@ theme = Dark Pastel
 # theme = GruvboxDarkHard
 font-family = "JetBrainsMono Nerd Font Mono"
 confirm-close-surface = false
-font-size = 13
+font-size = 12
+font-style = bold
 adjust-cursor-height = 1
 adjust-cursor-thickness = 1
 cursor-style = block_hollow
