--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,32 +1,13 @@
-# # # # # # # # # # # # # #
-# ┌┬┐┌─┐┌┐┌ ┬┌┬┐┌─┐┬─┐┌─┐ #
-# ││││ ││││ │ │ │ │├┬┘└─┐ #
-# ┴ ┴└─┘┘└┘ ┴ ┴ └─┘┴└─└─┘ #
-# # # # # # # # # # # # # #
+################
+### MONITORS ###
+################
 
-monitor = eDP-1,1920x1200@60,0x0,1
-# monitor = HDMI-A-1, 3840x2160@30, 1920x0, 1, mirror, eDP-1
+monitor=,preferred,auto,auto
 
+#################
+### AUTOSTART ###
+#################
 
-# monitor=,preferred,auto,1, mirror, HDMI-A-1
-
-
-# Dual monitor example on G15 Strix
-# eDP-1 is the built in monitor while DP-1 is external
-# Both monitors here are at 1440 and 165Hz
-# DP-1 is on the left and  eDP-1 is on the right
-# monitor=DP-1,2560x1440@165,0x0,1
-#monitor=eDP-1,2560x1440@165,2560x0,1
-
-
-
-# # # # # # # # # # # # # # # #
-# ┌─┐┬ ┬┌┬┐┌─┐┌─┐┌┬┐┌─┐┬─┐┌┬┐ #
-# ├─┤│ │ │ │ │└─┐ │ ├─┤├┬┘ │  #
-# ┴ ┴└─┘ ┴ └─┘└─┘ ┴ ┴ ┴┴└─ ┴  #
-# # # # # # # # # # # # # # # #
-
-# # # Base soft # # #
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = waybar -c ~/.config/waybar/hypr-config.json --style ~/.config/waybar/hypr-style.css # Task panel
@@ -35,62 +16,52 @@ exec-once = flameshot # Screenshot application
 exec-once=/usr/lib/polkit-kde-authentication-agent-1 # Graphical password requester
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
-exec-once = copyq &
 exec-once = hypridle
 exec-once = hyprswitch init --size-factor 4 --workspaces-per-row 4 &
+exec-once = cliphist store
 exec-once = ulauncher --hide-window --no-window-shadow &
-
-
 
 # # # My applications # # #
 exec-once = [workspace 1; float; size 1150 750] kitty tmux
 exec-once = [workspace 2; float; size 1485 1090] google-chrome-stable
-# exec-once = [workspace 3; float; move 30 85; size 1270 1070] telegram-desktop
-exec-once = [workspace 3] telegram-desktop
-exec-once = [workspace 3] time-desktop
-# exec-once = [workspace 8] kitty /home/alchemmist/scripts/start_nvim_in_kb.sh
+exec-once = [workspace 3; float; size 1144 934; move 64 88] time-desktop
+exec-once = [workspace 3; float; size 600 1018; move 1261 97] telegram-desktop
 
-# For all categories, see https://wiki.h
+#############################
+### ENVIRONMENT VARIABLES ###
+#############################
+
+
+env = XCURSOR_SIZE,24
+env = HYPRCURSOR_SIZE,24
+
+
+#####################
+### LOOK AND FEEL ###
+#####################
 
 ecosystem {
     no_donation_nag = true
     no_update_news = true
 }
 
-
-input {
-    kb_layout = us,ru
-    kb_options = ctrl:nocaps,grp:shifts_toggle # grp:win_space_toggle,
-    follow_mouse = 1
-
-    touchpad {
-        natural_scroll = no
-    }
-
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-    repeat_rate = 50
-    repeat_delay = 200
-}
-
 general {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
     gaps_in = 8
     gaps_out = 8, 15, 15, 15
     border_size = 0
-    #col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+
     col.active_border=rgb(cdd6f4)
     col.inactive_border = rgba(595959aa)
+
+    resize_on_border = false
+
+    allow_tearing = false
+
     layout = dwindle
 }
 
 
-misc {
-    disable_hyprland_logo = yes
-    disable_hyprland_qtutils_check = true
-}
-
 decoration {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 15
     shadow {
@@ -106,18 +77,14 @@ decoration {
     
     blur { 
         enabled = true
-        size = 5
+        size = 2
         passes = 3
     }
 }
 
 
-
-
 animations {
     enabled = yes
-
-    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
     # bezier = myBezier, 0.05, 0.9, 0.1, 1.05
     #
@@ -133,47 +100,184 @@ animations {
 }
 
 dwindle {
-    # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
     pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = yes # you probably want this
 }
 
+
 master {
-    # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    # new_is_master = true
+    new_status = master
+}
+
+misc {
+    disable_hyprland_logo = true
+    disable_hyprland_qtutils_check = true
+    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
+}
+
+
+#############
+### INPUT ###
+#############
+
+input {
+    kb_layout = us,ru
+    kb_options = ctrl:nocaps,grp:shifts_toggle # grp:win_space_toggle,
+    follow_mouse = 1
+
+    touchpad {
+        natural_scroll = no
+    }
+
+    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+    repeat_rate = 50
+    repeat_delay = 200
 }
 
 gestures {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = on
+    workspace_swipe = true
     workspace_swipe_invert = false
     workspace_swipe_distance = 180
 }
 
+###################
+### KEYBINDINGS ###
+###################
+
+
+$mainMod = SUPER
+
+
+# bind = ALT, Tab, bringactivetotop
+# bind = ALT,Tab,cyclenext 
+# bind = ALT,Tab,bringactivetotop
+
+# Открыть GUI hyprswitch
+bind = ALT, TAB, exec, hyprswitch simple --filter-current-workspace
+bind = ALT SHIFT, TAB, exec, hyprswitch simple --filter-current-workspace --reverse
+
+
+# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
+bind = $mainMod, Q, exec, kitty  #open the terminal
+bind = $mainMod, K, killactive, # close the active window
+bind = , 135, exec, hyprlock # Lock the screen
+bind = $mainMod, M, exec, wlogout --protocol layer-shell # show the logout window
+bind = $mainMod CTRL SHIFT, M, exit # Exit Hyprland all together no (force quit Hyprland)
+bind = $mainMod, E, exec, kitty -o allow_remote_control=yes --title yazi --hold sh -c 'yazi; kitty @ close-window'
+bind = $mainMod, B, exec, google-chrome-stable # Show the graphical file browser
+bind = $mainMod, T, togglefloating # Allow a window to float
+bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod, O, togglesplit, # dwindle
+bind = ALT, SPACE, exec, ulauncher-toggle --no-window-shadow # Show the graphicall app launcher
+bind = $mainMod, S, exec, flameshot gui --path=$HOME/Pictures/screenshots/ --clipboard # take a screenshot
+bind = ,F12, exec,grim -g "$(slurp)" - | tee ~/Pictures/screenshots/$(date +%Y-%m-%d_%H-%M-%S).png | wl-copy
+bind = $mainMod SHIFT, R, exec, killall waybar ; waybar --config /home/alchemmist/.config/waybar/hypr-config.json --style /home/alchemmist/.config/waybar/hypr-style.css
+bind = $mainMod, W, exec, ~/scripts/swww_random.sh
+bind = $mainMod SHIFT, W, exec, kitty --title wallpaper_pack_selector /home/alchemmist/scripts/wallpaper_pack_selector.sh
+bind = SUPER, C, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
+bind = CTRL, apostrophe, exec, wtype -P right -p right
+bind = $mainMod SHIFT, C, exec, kitty /home/alchemmist/scripts/start_nvim_in_kb.sh
+bind = $mainMod SHIFT, T, exec, kitty --title termdown -e termdown 
+bind = $mainMod,F,fullscreen
+# bind = $mainMod, SPACE, exec, wofi-emoji
+# bind = $mainMod, R, exec, ffmpeg -f alsa -i default -acodec libmp3lame -ab 192k /home/alchemmist/recordings/$(date +\%Y-\%m-\%d_\%H-\%M-\%S).mp3
 
 
 
-workspace=1,persistent:true
-workspace=2,persistent:true
-workspace=3,persistent:true
-workspace=4,persistent:true
-workspace=5,persistent:true
-workspace=6,persistent:true
-workspace=7,persistent:true
-workspace=8,persistent:true
-workspace=9,persistent:true
-workspace=10,persistent:true
+# ROG G15 Strix (2021) Specific binds
+# bind = ,156, exec, rog-control-center # ASUS Armory crate key
+# bind = ,211, exec, asusctl profile -n; pkill -SIGRTMIN+8 waybar # Fan Profile key switch between power profiles
+bind = ,121, exec, pamixer -t # Speaker Mute FN+F1
+bind = ,122, exec, pamixer -d 5 # Volume lower key
+bind = ,123, exec, pamixer -i 5 # Volume Higher key
+bind = ,256, exec, pamixer --default-source -t # Mic mute key
+bind = ,232, exec, brightnessctl set 2%- # Screen brightness down FN+F7
+bind = ,233, exec, brightnessctl set 2%+ # Screen brightness up FN+F8
+bind = ,237, exec, brightnessctl -d asus::kbd_backlight set 33%- # Keyboard brightness down FN+F2
+bind = ,238, exec, brightnessctl -d asus::kbd_backlight set 33%+ # Keyboard brightnes up FN+F3
+
+# Move focus with mainMod + arrow keys
+bind = $mainMod, l, movefocus, l
+bind = $mainMod, h, movefocus, r
+bind = $mainMod, k, movefocus, u
+bind = $mainMod, j, movefocus, d
+
+# Switch workspaces with mainMod + [0-9]
+bind = $mainMod, 1, workspace, 1
+bind = $mainMod, 2, workspace, 2
+bind = $mainMod, 3, workspace, 3
+bind = $mainMod, 4, workspace, 4
+bind = $mainMod, 5, workspace, 5
+bind = $mainMod, 6, workspace, 6
+bind = $mainMod, 7, workspace, 7
+bind = $mainMod, 8, workspace, 8
+bind = $mainMod, 9, workspace, 9
+bind = $mainMod, 0, workspace, 10
+
+# Move active window to a workspace with mainMod + SHIFT + [0-9]
+bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
+bind = $mainMod SHIFT, 2, movetoworkspacesilent, 2
+bind = $mainMod SHIFT, 3, movetoworkspacesilent, 3
+bind = $mainMod SHIFT, 4, movetoworkspacesilent, 4
+bind = $mainMod SHIFT, 5, movetoworkspacesilent, 5
+bind = $mainMod SHIFT, 6, movetoworkspacesilent, 6
+bind = $mainMod SHIFT, 7, movetoworkspacesilent, 7
+bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
+bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
+bind = $mainMod SHIFT, 0, movetoworkspacesilent, 10
+
+# Scroll through existing workspaces with mainMod + scroll
+bind = CTRL $mainMod, L, workspace, e+1
+bind = CTRL $mainMod, H, workspace, e-1
+
+# Move/resize windows with mainMod + LMB/RMB and dragging
+bindm = $mainMod, mouse:272, movewindow
+bindm = $mainMod SHIFT, mouse:272, resizewindow
+
+# Resize with arrows
+bind = $mainMod SHIFT, h, resizeactive, -50 0
+bind = $mainMod SHIFT, l, resizeactive, 50 0
+bind = $mainMod SHIFT, k, resizeactive, 0 -50
+bind = $mainMod SHIFT, j, resizeactive, 0 50
+
+# Move window in tile group
+bind = $mainMod CTRL SHIFT, h, swapwindow, l
+bind = $mainMod CTRL SHIFT, l, swapwindow, r
+bind = $mainMod CTRL SHIFT, k, swapwindow, u
+bind = $mainMod CTRL SHIFT, j, swapwindow, d
+
+
+
+
+
+
+# ##############################
+# ### WINDOWS AND WORKSPACES ###
+# ##############################
+workspace=1,monitor:eDP-1
+workspace=2,monitor:eDP-1
+workspace=3,monitor:eDP-1
+workspace=4,monitor:eDP-1
+workspace=5,monitor:eDP-1
+workspace=6,monitor:eDP-1
+workspace=7,monitor:eDP-1
+workspace=8,monitor:eDP-1
+workspace=9,monitor:eDP-1
+workspace=10,monitor:eDP-1
 
 # imv
 windowrulev2=float,class:^(imv)$
 windowrulev2=size 700 600,class:^(imv)$
+
+# TiMe
+windowrulev2=float,class:^(TiMe)$
+windowrulev2=move 64 88,class:^(TiMe)$
 
 # Obsidian
 windowrulev2=size 1140 963,class:^(obsidian)$
 windowrulev2=move 390 135,class:^(obsidian)$
 windowrulev2=workspace 10,class:^(obsidian)$
 windowrulev2=pseudotile,class:^(obsidian)$
-
 
 
 # Telegram Image Preview
@@ -254,110 +358,7 @@ windowrulev2 = size 600 600,class:^(thunar)$
 
 
 # inkscape
-windowrulev2 = workspace 7,class:^(org.inkscape.Inkscape)$
+windowrulev2 = workspace 7,class:^(org.inkscape.inkscape)$
 
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
-$mainMod = SUPER
-
-
-# bind = ALT, Tab, bringactivetotop
-# bind = ALT,Tab,cyclenext 
-# bind = ALT,Tab,bringactivetotop
-
-# Открыть GUI hyprswitch
-bind = ALT, TAB, exec, hyprswitch simple --filter-current-workspace
-bind = ALT SHIFT, TAB, exec, hyprswitch simple --filter-current-workspace --reverse
-
-
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, kitty  #open the terminal
-bind = ALT, F4, killactive, # close the active window
-bind = , 135, exec, hyprlock # Lock the screen
-bind = $mainMod, M, exec, wlogout --protocol layer-shell # show the logout window
-bind = $mainMod CTRL SHIFT, M, exit # Exit Hyprland all together no (force quit Hyprland)
-bind = $mainMod, E, exec, kitty -o allow_remote_control=yes --title yazi --hold sh -c 'yazi; kitty @ close-window'
-bind = $mainMod, B, exec, google-chrome-stable # Show the graphical file browser
-bind = $mainMod, T, togglefloating # Allow a window to float
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, O, togglesplit, # dwindle
-bind = ALT, SPACE, exec, ulauncher-toggle --no-window-shadow # Show the graphicall app launcher
-bind = $mainMod, S, exec, flameshot gui --path=$HOME/Pictures/screenshots/ --clipboard # take a screenshot
-bind = ,F12, exec,grim -g "$(slurp)" - | tee ~/Pictures/screenshots/$(date +%Y-%m-%d_%H-%M-%S).png | wl-copy
-bind = $mainMod SHIFT, R, exec, killall waybar ; waybar --config /home/alchemmist/.config/waybar/hypr-config.json --style /home/alchemmist/.config/waybar/hypr-style.css
-bind = $mainMod, W, exec, ~/scripts/swww_random.sh
-bind = $mainMod SHIFT, W, exec, kitty --title wallpaper_pack_selector /home/alchemmist/scripts/wallpaper_pack_selector.sh
-# bind = SUPER, C, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
-bind = CTRL, apostrophe, exec, wtype -P right -p right
-bind = $mainMod SHIFT, C, exec, kitty /home/alchemmist/scripts/start_nvim_in_kb.sh
-bind = $mainMod SHIFT, T, exec, kitty --title termdown -e termdown 
-bind = $mainMod,F,fullscreen
-# bind = $mainMod, SPACE, exec, wofi-emoji
-# bind = $mainMod, R, exec, ffmpeg -f alsa -i default -acodec libmp3lame -ab 192k /home/alchemmist/recordings/$(date +\%Y-\%m-\%d_\%H-\%M-\%S).mp3
-
-
-
-# ROG G15 Strix (2021) Specific binds
-# bind = ,156, exec, rog-control-center # ASUS Armory crate key
-# bind = ,211, exec, asusctl profile -n; pkill -SIGRTMIN+8 waybar # Fan Profile key switch between power profiles
-bind = ,121, exec, pamixer -t # Speaker Mute FN+F1
-bind = ,122, exec, pamixer -d 5 # Volume lower key
-bind = ,123, exec, pamixer -i 5 # Volume Higher key
-bind = ,256, exec, pamixer --default-source -t # Mic mute key
-bind = ,232, exec, brightnessctl set 2%- # Screen brightness down FN+F7
-bind = ,233, exec, brightnessctl set 2%+ # Screen brightness up FN+F8
-bind = ,237, exec, brightnessctl -d asus::kbd_backlight set 33%- # Keyboard brightness down FN+F2
-bind = ,238, exec, brightnessctl -d asus::kbd_backlight set 33%+ # Keyboard brightnes up FN+F3
-
-# Move focus with mainMod + arrow keys
-bind = $mainMod, l, movefocus, l
-bind = $mainMod, h, movefocus, r
-bind = $mainMod, k, movefocus, u
-bind = $mainMod, j, movefocus, d
-
-# Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
-
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
-bind = $mainMod SHIFT, 2, movetoworkspacesilent, 2
-bind = $mainMod SHIFT, 3, movetoworkspacesilent, 3
-bind = $mainMod SHIFT, 4, movetoworkspacesilent, 4
-bind = $mainMod SHIFT, 5, movetoworkspacesilent, 5
-bind = $mainMod SHIFT, 6, movetoworkspacesilent, 6
-bind = $mainMod SHIFT, 7, movetoworkspacesilent, 7
-bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
-bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
-bind = $mainMod SHIFT, 0, movetoworkspacesilent, 10
-
-# Scroll through existing workspaces with mainMod + scroll
-bind = CTRL $mainMod, L, workspace, e+1
-bind = CTRL $mainMod, H, workspace, e-1
-
-# Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod SHIFT, mouse:272, resizewindow
-
-# Resize with arrows
-bind = $mainMod SHIFT, h, resizeactive, -50 0
-bind = $mainMod SHIFT, l, resizeactive, 50 0
-bind = $mainMod SHIFT, k, resizeactive, 0 -50
-bind = $mainMod SHIFT, j, resizeactive, 0 50
-
-# Move window in tile group
-bind = $mainMod CTRL SHIFT, h, swapwindow, l
-bind = $mainMod CTRL SHIFT, l, swapwindow, r
-bind = $mainMod CTRL SHIFT, k, swapwindow, u
-bind = $mainMod CTRL SHIFT, j, swapwindow, d
-
-
-
-
+# FIX SOME DRAGGING ISSUES WITH XWAYLAND
+windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
