--- a/waybar/hypr-config.json
+++ b/waybar/hypr-config.json
@@ -157,7 +157,19 @@
     "disable-scroll": true,
     "on-scroll-up": "hyprctl dispatch workspace e-1",
     "on-scroll-down": "hyprctl dispatch workspace e+1",
-    "sort-by-number": true
+    "sort-by-number": true,
+    "persistent-workspaces": {
+      "1": "1",
+      "2": "2",
+      "3": "3",
+      "4": "4",
+      "5": "5",
+      "6": "6",
+      "7": "7",
+      "8": "8",
+      "9": "9",
+      "10": "10"
+    }
   },
 
   "custom/power_profile": {
