--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -9,6 +9,7 @@ monitor=,preferred,auto,auto
 #################
 
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = waybar -c ~/.config/waybar/hypr-config.json --style ~/.config/waybar/hypr-style.css # Task panel
 exec-once = swww-daemon --format xrgb # Wallpaper controller
@@ -23,7 +24,7 @@ exec-once = ulauncher --hide-window --no-window-shadow &
 
 # # # My applications # # #
 exec-once = [workspace 1; float; size 1150 750] kitty tmux
-exec-once = [workspace 2; float; size 1485 1090] google-chrome-stable
+exec-once = [workspace 2; float; size 1485 1090] google-chrome-stable --ozone-platform-hint=auto
 exec-once = [workspace 3; float; size 1144 934; move 64 88] time-desktop
 exec-once = [workspace 3; float; size 600 1018; move 1261 97] telegram-desktop
 
@@ -34,6 +35,16 @@ exec-once = [workspace 3; float; size 600 1018; move 1261 97] telegram-desktop
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+env = PATH,$PATH:$scrPath
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
+env = XDG_SESSION_DESKTOP,Hyprland
+env = QT_QPA_PLATFORM,wayland;xcb
+env = QT_QPA_PLATFORMTHEME,qt6ct
+env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
+env = QT_AUTO_SCREEN_SCALE_FACTOR,1
+env = MOZ_ENABLE_WAYLAND,1
+env = GDK_SCALE,1
 
 
 #####################
@@ -82,22 +93,35 @@ decoration {
     }
 }
 
+layerrule = noanim, hyprpicker
+layerrule = noanim, selection
 
 animations {
-    enabled = yes
-
-    # bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-    #
-    # animation = windows, 1, 7, myBezier
-    # animation = windowsOut, 1, 7, default, popin 80%
-    # animation = border, 1, 10, default
-    # animation = fade, 1, 7, default
-    # animation = workspaces, 1, 6, default
-
-    bezier = subtleBounce, 0.2, 0.8, 0.3, 1.0  ; Более плавная кривая
-    animation = windowsIn, 1, 5, subtleBounce, slide bottom popin 90% ; Ускоренная анимация, меньший подскок
-    animation = windowsOut, 1, 5, subtleBounce, slide bottom popout 90% ; Ускоренная анимация
+    enabled = true
+    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+    animation = windows, 1, 7, myBezier
+    animation = windowsOut, 1, 7, default, popin 80%
+    animation = border, 1, 10, default
+    animation = borderangle, 1, 8, default
+    animation = fade, 1, 7, default
+    animation = workspaces, 1, 6, default
 }
+
+# animations {
+#     enabled = yes
+#
+#     # bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+#     #
+#     # animation = windows, 1, 7, myBezier
+#     # animation = windowsOut, 1, 7, default, popin 80%
+#     # animation = border, 1, 10, default
+#     # animation = fade, 1, 7, default
+#     # animation = workspaces, 1, 6, default
+#
+#     bezier = subtleBounce, 0.2, 0.8, 0.3, 1.0  ; Более плавная кривая
+#     animation = windowsIn, 1, 5, subtleBounce, slide bottom popin 90% ; Ускоренная анимация, меньший подскок
+#     animation = windowsOut, 1, 5, subtleBounce, slide bottom popout 90% ; Ускоренная анимация
+# }
 
 dwindle {
     pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
@@ -110,10 +134,16 @@ master {
 }
 
 misc {
+    vrr = 0
     disable_hyprland_logo = true
-    disable_hyprland_qtutils_check = true
-    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
+    disable_splash_rendering = true
+    force_default_wallpaper = 0
 }
+
+xwayland {
+    force_zero_scaling = true
+}
+
 
 
 #############
@@ -164,7 +194,7 @@ bind = , 135, exec, hyprlock # Lock the screen
 bind = $mainMod, M, exec, wlogout --protocol layer-shell # show the logout window
 bind = $mainMod CTRL SHIFT, M, exit # Exit Hyprland all together no (force quit Hyprland)
 bind = $mainMod, E, exec, kitty -o allow_remote_control=yes --title yazi --hold sh -c 'yazi; kitty @ close-window'
-bind = $mainMod, B, exec, google-chrome-stable # Show the graphical file browser
+bind = $mainMod, B, exec, google-chrome-stable --ozone-platform-hint=auto # Show the graphical file browser
 bind = $mainMod, T, togglefloating # Allow a window to float
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, O, togglesplit, # dwindle
@@ -174,6 +204,7 @@ bind = ,F12, exec,grim -g "$(slurp)" - | tee ~/Pictures/screenshots/$(date +%Y-%
 bind = $mainMod SHIFT, R, exec, killall waybar ; waybar --config /home/alchemmist/.config/waybar/hypr-config.json --style /home/alchemmist/.config/waybar/hypr-style.css
 bind = $mainMod, W, exec, ~/scripts/swww_random.sh
 bind = $mainMod SHIFT, W, exec, kitty --title wallpaper_pack_selector /home/alchemmist/scripts/wallpaper_pack_selector.sh
+bind = $mainMod, V, exec, ~/scripts/wireguard-manager.sh -t && pkill -SIGRTMIN+1 waybar
 bind = SUPER, C, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
 bind = CTRL, apostrophe, exec, wtype -P right -p right
 bind = $mainMod SHIFT, C, exec, kitty /home/alchemmist/scripts/start_nvim_in_kb.sh
