--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,11 @@ repos:
     hooks:
       - id: save-pacman-packages
         name: Save pacman package lists
-        entry: bash -c 'mkdir -p arch && pacman -Qqen > arch/pkglist.txt && pacman -Qqem > arch/aurlist.txt'
+        entry: >
+          bash -c 'mkdir -p arch &&
+          pacman -Qqen > arch/pkglist.txt &&
+          pacman -Qqem > arch/aurlist.txt &&
+          git add arch/pkglist.txt arch/aurlist.txt'
         language: system
         pass_filenames: false
+
